# Energy-Demand-Forecast

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
.circleci/: config.yml
.github/workflows/: daily-forecast.yml  deploy.yml
.streamlit/: config.toml
Tools/: 30days.csv  Data Analysis and Model training.ipynb  Data Extraction.ipynb  day.csv  month.csv  past_data.csv  style.css
src/: __init__.py  benchmark.py  database.py  extractor.py  feature_eng.py  main.py  model.py  processor.py  settings.py  streamlit_app.py
tests/: conftest.py  test_benchmark.py  test_database.py  test_extractor.py  test_feature_eng.py  test_model.py  test_processor.py
