[project]
name = "energy-demand-forecast"
version = "0.1.0"
description = "Energy demand forecasting with Prophet + skforecast and model benchmarking"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "prophet>=1.1.5",
    "skforecast>=0.14.0",
    "lightgbm>=4.0.0",
    "supabase>=2.23.0",
    "streamlit>=1.28.0",
    "altair>=5.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.14.0",
    "holidays>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "pytest>=8.0.0",
]

[project.scripts]
forecast = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
]
ignore = [
    "E501",
    "N803",  # argument X_train/y_train — ML convention
    "N806",  # variable X_test/y_test — ML convention
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests that call live external APIs (skipped in CI)",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["arg-type", "no-any-return"]